--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/benbria/aha.js"
   },
   "author": "Geoffry Song <goffrie@gmail.com>",
-  "license": "MPL-2.0",
+  "license": "MPL-1.1 OR LGPL-2.1",
   "bugs": {
     "url": "https://github.com/benbria/aha.js/issues"
   },
